# mpssba

./: .gitignore  README.md  pyproject.toml
configs/: config.example.json
mpssba/: batch_runner.py  config.py  experiment_setup.py  generators.py  masks.py  metrics.py  physics.py  post_processor.py  trainer.py
mpssba/tui/: plotter_tui.py  plotter_tui.tcss
mpssba/visualization/: data_loader.py  plotters.py
scripts/: plot.py  postprocess.py  run_pipeline.py
